package entity;

public class GameState {
    private String currentSongTitle = "";
    private String currentSongArtist = "";
}
