package use_case.SingerChoose;

public interface SingerChooseDataAccessInterface {
}
