package use_case.SingerChoose;

public interface SingerChooseInputBoundary {
    void execute(SingerChooseInputData singerChooseInputdata);
}
