package use_case.SingerChoose;

public class SingerChooseInputData {
}
