package use_case.SingerChoose;

public class SingerChooseOutputData {
}
